rearranging API on swagger and connectivity issues on APIs
