# src/swagger.json
@@ -1,4 +1,3 @@
-
 {
   "swagger": "2.0",
   "info": {
@@ -15,11 +14,27 @@
     {
       "name": "User",
       "description": "API for user in MY-BRAND-ANDRE-BE"
+    },
+    {
+      "name": "Category",
+      "description": "API for managing categories"
+    },
+    {
+      "name": "Blog",
+      "description": "API for managing blogs"
+    }, {
+      "name": "Comment",
+      "description": "API for managing comments"
+    },
+    {
+      "name": "Contact Message",
+      "description": "API for managing contact messages"
     }
   ],
   "basePath": "/",
   "schemes": [
-    "http"
+    "http",
+    "https"
   ],
   "securityDefinitions": {
     "JWT": {
@@ -38,6 +53,7 @@
   "paths": {
     "/users": {
       "post": {
+        "tags": ["User"],
         "summary": "Create a new user",
         "description": "Creates a new user with the provided information",
         "parameters": [
@@ -63,6 +79,7 @@
         }
       },
       "get": {
+        "tags": ["User"],
         "summary": "Fetch all users",
         "security": [
           {
@@ -85,6 +102,7 @@
     },
     "/user/{id}": {
       "get": {
+        "tags": ["User"],
         "summary": "Fetch user by ID",
         "security": [
           {
@@ -117,6 +135,7 @@
         }
       },
       "patch": {
+        "tags": ["User"],
         "summary": "Update user by ID",
         "security": [
           {
@@ -131,6 +150,15 @@
             "description": "ID of the user to update",
             "required": true,
             "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User properties to update",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           }
         ],
         "responses": {
@@ -152,6 +180,7 @@
         }
       },
       "delete": {
+        "tags": ["User"],
         "summary": "Delete user by ID",
         "security": [
           {
@@ -186,6 +215,7 @@
     },
     "/user": {
       "post": {
+        "tags": ["User"],
         "summary": "Login",
         "description": "Logs in the user with the provided credentials",
         "consumes": [
@@ -209,9 +239,7 @@
                 },
                 "password": {
                   "type": "string",
-                 
-
- "description": "Password"
+                  "description": "Password"
                 }
               }
             }
@@ -229,10 +257,499 @@
           }
         }
       }
+    },
+    "/category": {
+      "post": {
+        "summary": "Create a category",
+        "description": "Endpoint to create a new category",
+        "tags": ["Category"],
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "category to create",
+            "schema": {
+              "$ref": "#/definitions/BCategory"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Category created successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/categories": {
+      "get": {
+        "summary": "Fetch all categories",
+        "description": "Endpoint to fetch all categories",
+        "tags": ["Category"],
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Categories fetched successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/category/{id}": {
+      "delete": {
+        "summary": "Delete category by ID",
+        "description": "Endpoint to delete a category by ID",
+        "tags": ["Category"],
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Category deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Category not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/createBlogs": {
+      "post": {
+        "tags": ["Blog"],
+        "summary": "Create a new blog",
+        "description": "Creates a new blog with the provided information",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Blog data",
+            "schema": {
+              "$ref": "#/definitions/Blog"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Blog created successfully"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/fetchBlogs": {
+      "get": {
+        "tags": ["Blog"],
+        "summary": "Fetch all blogs",
+        "description": "Retrieves a list of all blogs",
+        "responses": {
+          "200": {
+            "description": "List of blogs retrieved successfully"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/fetchBlogById/{id}": {
+      "get": {
+        "tags": ["Blog"],
+        "summary": "Fetch blog by ID",
+        "description": "Retrieves blog details by its ID",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the blog to fetch",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Blog details retrieved successfully"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "404": {
+            "description": "Blog not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/patchBlogById/{id}": {
+      "patch": {
+        "tags": ["Blog"],
+        "summary": "Update blog by ID",
+        "description": "Updates blog details by its ID",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the blog to update",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Updated blog data",
+            "schema": {
+              "$ref": "#/definitions/Blog"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Blog updated successfully"
+          },
+          "400": {
+            "description": "Invalid blog data provided"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "404": {
+            "description": "Blog not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/deleteBlogById/{id}": {
+      "delete": {
+        "tags": ["Blog"],
+        "summary": "Delete blog by ID",
+        "description": "Deletes blog by its ID",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the blog to delete",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Blog deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "404": {
+            "description": "Blog not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    
+    "/comments": {
+      "post": {
+        "tags": ["Comment"],
+        "summary": "Create a comment",
+        "description": "Creates a new comment",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Comment data",
+            "schema": {
+              "$ref": "#/definitions/Comment"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Comment created successfully"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Comment"],
+        "summary": "Fetch all comments",
+        "description": "Retrieves a list of all comments",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        
+        "responses": {
+          "200": {
+            "description": "Comments fetched successfully"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/comment/{userId}": {
+      "get": {
+        "tags": ["Comment"],
+        "summary": "Fetch comments by user ID",
+        "description": "Retrieves comments by user ID",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "ID of the user whose comments to fetch",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Comments fetched successfully"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/commentLike/{userId}/{id}": {
+      "patch": {
+        "tags": ["Comment"],
+        "summary": "Update comment by user ID and comment ID",
+        "description": "Updates comment details by user ID and comment ID",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "ID of logged user who is going to like",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the comment to like",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Like comment",
+            "schema": {
+              "$ref": "#/definitions/Comment"
+            }
+          }
+          
+        ],
+        "responses": {
+          "200": {
+            "description": "Comment updated successfully"
+          },
+          "400": {
+            "description": "Invalid comment data provided"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "404": {
+            "description": "Comment not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+
+    
+    "/contactMsgs": {
+      "post": {
+        "tags": ["Contact Message"],
+        "summary": "Create a contact message",
+        "description": "Creates a new contact message",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Contact message data",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ContactMsg"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Contact message created successfully"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Contact Message"],
+        "summary": "Fetch all contact messages",
+        "description": "Retrieves a list of all contact messages",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Contact messages fetched successfully"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/readMsg/{id}": {
+      "patch": {
+        "tags": ["Contact Message"],
+        "summary": "Mark message as read",
+        "description": "Marks a contact message as read by its ID",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the message to mark as read",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name":"body",
+            "in": "body",
+            "description": "Update read status",
+            "schema": {
+              "$ref": "#/definitions/ContactMsg"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Message marked as read successfully"
+          },
+          "400": {
+            "description": "Invalid message ID provided"
+          },
+          "401": {
+            "description": "Unauthorized: Token missing or invalid"
+          },
+          "404": {
+            "description": "Message not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
     }
   },
-
-  
   "definitions": {
     "User": {
       "type": "object",
@@ -337,8 +854,8 @@
                     "type": "integer"
                   }
                 },
-                "required": [
-                  "userId"
+                "required": [  
+                  "userId" 
                 ]
               }
             }
@@ -374,7 +891,8 @@
           "enum": [
             "1",
             "0"
-          ]
+          ],
+          "default":0
         }
       },
       "required": [
